--- a/pages/signedin.html
+++ b/pages/signedin.html
@@ -12,7 +12,7 @@
         <script src="https://kit.fontawesome.com/95ef876d75.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/95ef876d75.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="../css/shop.css">
+        <link rel="stylesheet" href="../css/signedin.css">
     </head>
 
     <body>
@@ -47,8 +47,11 @@
               </ul>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> CART</a>
+                    <a class="nav-link" id="myBtn" href="#"><i class="fas fa-shopping-cart"></i> CART</a>
                 </li>
+
+                
+
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/myaccount.html"><i class="fas fa-user"></i> My Account</a>
                 </li>
@@ -56,6 +59,33 @@
             </div>
         </nav>
 
+        <div id="cart" class="cart">
+          <div class="cart-item d-flex justify-content-between text-capitalize my-3"></div>
+        </div>
+
+                  <!-- The Modal -->
+                  <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div  id="cart" class="modal-content cart">
+                      <div class="modal-header">
+                        <span class="close">&times;</span>
+                        <h2>Shopping Cart</h2>
+                      </div>
+
+                      <div class="modal-body cart-item-title">
+                        <p id="cart-item-title" class="font-weight-bold mb-0">cart item</p>
+                        <span id="cart-item-price" class="cart-item-price">179.99</span>
+                        <a href="#" id="cart-item-remove" class="cart-item-remove"><i class="fas fa-trash"></i></a>
+                      </div>
+                      
+
+                      <div class="modal-footer">
+                        <a href=""><h3>Continue</h3></a>
+                      </div>
+                    </div>
+
+                  </div>
 
         <div class="row justify-content-center">
             <div class="column">
@@ -64,7 +94,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Nike, Dress</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -75,8 +105,8 @@
                     <div class="card-body">
                       <h5 class="card-title">Esprit, Dress, Pink</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
-                      <span>199<sup>99</sup></span>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
+                      <span>154<sup>99</sup></span>
                     </div>
                 </div>
             </div>
@@ -86,8 +116,8 @@
                     <div class="card-body">
                       <h5 class="card-title">United Colors of Benetton</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
-                      <span>199<sup>99</sup></span>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
+                      <span>189<sup>99</sup></span>
                     </div>
                 </div>
             </div>
@@ -97,8 +127,8 @@
                     <div class="card-body">
                       <h5 class="card-title">Esprit, Dress, Green</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
-                      <span>199<sup>99</sup></span>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
+                      <span>299<sup>99</sup></span>
                     </div>
                 </div>
             </div>
@@ -112,8 +142,8 @@
                     <div class="card-body">
                       <h5 class="card-title">Vila, mini, red</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
-                      <span>199<sup>99</sup></span>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
+                      <span>99<sup>99</sup></span>
                     </div>
                 </div>
             </div>
@@ -123,8 +153,8 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress X</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
-                      <span>199<sup>99</sup></span>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
+                      <span>89<sup>99</sup></span>
                     </div>
                 </div>
             </div>
@@ -134,7 +164,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress Y</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -145,8 +175,8 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress Z</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
-                      <span>199<sup>99</sup></span>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
+                      <span>179<sup>99</sup></span>
                     </div>
                 </div>
             </div>
@@ -282,5 +312,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="../scripts/shop.js"></script>
     </body>
 </html>
