adding new files

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -47,9 +47,6 @@
               </ul>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> CART</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="../pages/signup.html"><i class="fas fa-user"></i> Sign Up</a>
                 </li>
                 <li class="nav-item">
@@ -67,7 +64,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Nike, Dress</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -78,7 +75,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Esprit, Dress, Pink</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -89,7 +86,7 @@
                     <div class="card-body">
                       <h5 class="card-title">United Colors of Benetton</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -100,7 +97,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Esprit, Dress, Green</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -115,7 +112,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Vila, mini, red</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -126,7 +123,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress X</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -137,7 +134,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress Y</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -148,7 +145,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress Z</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -286,6 +283,6 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
        
-        <script src="login.js"></script>
+        <script src="../scripts/alertforcart.js"></script>
     </body>
 </html>
