--- a/pages/signedin.html
+++ b/pages/signedin.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/95ef876d75.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../css/signedin.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
 
     <body>
@@ -47,7 +48,7 @@
               </ul>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" id="myBtn" href="#"><i class="fas fa-shopping-cart"></i> CART</a>
+                    <a class="nav-link" id="myBtn" href="#"><i class="fas fa-shopping-cart"></i></a>
                 </li>
 
                 
@@ -75,7 +76,8 @@
 
                       <div class="modal-body cart-item-title">
                         <p id="cart-item-title" class="font-weight-bold mb-0">cart item</p>
-                        <span id="cart-item-price" class="cart-item-price">179.99</span>
+                        <h3>item</h3>
+                        <p id="cart-item-price" class="cart-item-price">179.99</p>
                         <a href="#" id="cart-item-remove" class="cart-item-remove"><i class="fas fa-trash"></i></a>
                       </div>
                       
