adding new files

--- a/pages/main.html
+++ b/pages/main.html
@@ -57,7 +57,11 @@
                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   </div>
                   <div class="modal-body">
-                      <p>Subscribe to our mailing list to get the latest updates straight in your inbox.</p>
+                      <ul>
+                        <li>go to shop</li>
+                        <li>select dresses</li>
+                        <li>also, check the carousel</li>
+                      </ul>
                      
                   </div>
               </div>
