--- a/pages/signedin.html
+++ b/pages/signedin.html
@@ -95,7 +95,7 @@
 
                       <div class="modal-footer">
                         <h4 id="total">0.00 lei</h4>
-                        <a href=""><h3>Continue</h3></a>
+                        <a href="finalForm.php" id="goToForm" class="btn disabled"><h3>Continue</h3></a>
                       </div>
                     </div>
 
@@ -119,7 +119,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Esprit, Dress, Pink</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary store-item-icon add-to-cart" id="2">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon add-to-cart disabled" id="2">Add to cart</a>
                       <span>154<sup>99</sup></span>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                     <div class="card-body">
                       <h5 class="card-title">United Colors of Benetton</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary store-item-icon add-to-cart" id="3">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon add-to-cart disabled" id="3">Add to cart</a>
                       <span>189<sup>99</sup></span>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Esprit, Dress, Green</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary store-item-icon add-to-cart" id="4">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon add-to-cart disabled" id="4">Add to cart</a>
                       <span>299<sup>99</sup></span>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Vila, mini, red</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary store-item-icon add-to-cart" id="5">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon add-to-cart disabled" id="5">Add to cart</a>
                       <span>99<sup>99</sup></span>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress X</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary store-item-icon add-to-cart" id="6">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon add-to-cart disabled" id="6">Add to cart</a>
                       <span>89<sup>99</sup></span>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress Y</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary store-item-icon add-to-cart" id="7">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon add-to-cart disabled" id="7">Add to cart</a>
                       <span>199<sup>99</sup></span>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dress Z</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary store-item-icon add-to-cart" id="8">Add to cart</a>
+                      <a href="#" class="btn btn-primary store-item-icon add-to-cart disabled" id="8">Add to cart</a>
                       <span>179<sup>99</sup></span>
                     </div>
                 </div>
