--- a/pages/signup.html
+++ b/pages/signup.html
@@ -54,6 +54,26 @@
             </div>
         </nav>
 
+        <div id="myModal" class="modal fade">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h4 class="modal-title tc">Instructions</h4>
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  </div>
+                  <div class="modal-body">
+                      <ul>
+                        <li>enter email</li>
+                        <li>enter password</li>
+                        <li>not saving yet</li>
+                        <li>please, go to login</li>
+                      </ul>
+                     
+                  </div>
+              </div>
+          </div>
+        </div>
+
 
         <div class="container">
             <form action="action_page.php" style="border:1px solid #ccc">
@@ -87,5 +107,6 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script type="module" src="../scripts/signup.js"></script>
+        <script src="../scripts/loadAfter5s.js"></script>
     </body>
 </html>
